<resources>
    <string name="app_name">Nuntium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //my strings
    <string name="categories">Categories</string>
    <string name="categories_des">Thousands of articles in each category</string>
    <string name="browse">Browse</string>
    <string name="browse_des">Discover things of this world</string>
    <string name="search_hint">Search</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="see_all">See all</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="first_to_know">First to know</string>
    <string name="first_to_know_des">All news in one place, be the first to know last news</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_des">Saved articles to the library</string>
    <string name="empty_text">You haven\'t saved any articles yet. Start reading and bookmarking them now</string>
    <string name="search_millions_news">Search millions news</string>
    <string name="latest_news">Latest News</string>
    <string name="select_your_favorite_topics">Select your favorite topics</string>
    <string name="select_topic_des">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="app_des">All news in one place, be the first to know last news</string>
    <string name="get_started">Get Started</string>


    //my default strings


</resources>