<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SelectTopicFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/select_your_favorite_topics"
        android:textColor="@color/main_txt_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/secondary_txt_color"
        android:text="@string/select_topic_des"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:gravity="center">


        <ProgressBar
            android:id="@+id/progrres_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/purple_700"
            android:progressTint="@color/purple_700" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rv_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topics_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_topic_rv" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_back"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>