<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/settings"
        android:textColor="@color/main_txt_color"
        android:textSize="22sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/light_dark_mode_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_topic_back"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/light_mode"
            android:textColor="@color/secondary_txt_color"
            android:textSize="18sp" />


        <vn.luongvo.widget.iosswitchview.SwitchView
            android:id="@+id/switchview"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            app:color_off="@color/secondary_txt_color"
            app:color_on="#475ad7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/language_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_topic_back"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/language"
            android:textColor="@color/secondary_txt_color"
            android:textSize="18sp" />


        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

</LinearLayout>