<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LanguageFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:padding="7dp"
            android:src="@drawable/ic_back_button_dark" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/main_txt_color"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/english_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_topic_back"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/english_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/english"
            android:textColor="@color/secondary_txt_color"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/english_tick"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="15dp"
            android:padding="7dp"
            android:src="@drawable/ic_tick"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/russian_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/item_topic_back"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/russian_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/russian"
            android:textColor="@color/secondary_txt_color"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/tick_button"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="15dp"
            android:padding="7dp"
            android:src="@drawable/ic_tick"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>